test/io/marybeth/testreadln5.good
testreadln5.chpl:3: error: halt reached - Operation attempted on an invalid file
